<resources>
    <string name="app_name">Package Management System</string>

    <string name="not_implemented">Not yet implemented</string>

    <string name="tittle_modify_package">Paczka %1$s</string>
    <string name="tittle_modify_part">Część %1$s</string>
    <string name="tittle_activity_list_parts">Lista części</string>
    <string name="tittle_activity_list_packages">Lista paczek</string>
    <string name="tittle_activity_single_package">Paczka %1$05d</string>
    <string name="title_activity_scan_rfid">scanRFID</string>
    <string name="title_activity_modify_package">Modyfikuj Paczkę</string>

    <string name="menu_manage_parts">Zarządzaj częściami</string>
    <string name="menu_manage_packages">Zarządzaj paczkami</string>
    <string name="menu_scan">Zeskanuj paczkę</string>
    <string name="menu_test">Aktywność testowa</string>

    <string name="scanRFID">Zeskanuj RFID</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="ok">OK</string>
    <string name="warning">Uwaga!</string>
    <string name="error">Błąd</string>

    <string name="btn_modify">Modyfikuj</string>
    <string name="btn_delete">Usuń</string>
    <string name="btn_overwrite">Nadpisz</string>
    <string name="btn_add">Dodaj</string>
    <string name="btn_save">Zapisz</string>
    <string name="btn_search">Wyszukaj</string>
    <string name="btn_add_parts">Dodaj części</string>
    <string name="btn_back">Cofnij</string>

    <string name="action_done">Done</string>
    <string name="action_search">search</string>
    <string name="action_add">add</string>

    <string name="label_missing_part_list">Lista brakujących części \n</string>
    <string name="label_package_part_list">Lista części w paczce:</string>
    <string name="label_mass">Masa:</string>
    <string name="label_dimensions">Wymiary:</string>
    <string name="label_barcode">Kod kreskowy:</string>
    <string name="label_location">Lokalizacja:</string>
    <string name="label_additional_info">Dodatkowe informacje:</string>
    <string name="label_aisle">Alejka:</string>
    <string name="label_name">Nazwa</string>
    <string name="label_producer">Nazwa producenta</string>
    <string name="label_buyURL">Link do sklepu</string>
    <string name="label_price">Cena [zł]</string>
    <string name="label_height">Wysokość</string>
    <string name="label_width">Szerokość</string>
    <string name="label_depth">Głębokość</string>
    <string name="label_rack">Regał</string>
    <string name="label_shelf">Półka</string>
    <string name="label_street">Ulica</string>
    <string name="label_street_number">Numer domu</string>
    <string name="label_city">Miasto</string>
    <string name="label_number">Numer telefonu</string>
    <string name="label_quantity_all">Ilość w magazynie:</string>

    <string name="dialog_confirm_delete_title">Potwierdź usunięcie</string>
    <string name="dialog_confirm_delete_message">Czy na pewno chcesz usunąć?</string>
    <string name="dialog_warning_overwrite_package">Zamierzasz nadpisać paczkę</string>
    <string name="dialog_show_info">Pokaż dalsze informacje</string>
    <string name="dialog_tittle_how_many_parts">Podaj ilość</string>
    <string name="dialog_warning_order_not_executable">W magazynie nie ma wystarczającej liczby części</string>


    <string name="warning_not_in_database">Brak paczki w bazie danych</string>
    <string name="warning_not_in_order">Tej paczki nie ma w zamówieniu</string>
    <string name="warning_take_this_package">Ta paczka znajduje się w zamówieniu</string>
    <string name="warning_order_completed">Zamówienie zakończone</string>
    <string name="warning_insert_name">Wprowadź nazwę</string>


</resources>
