<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.kszych.pms.PartSearchActivity">

    <TableLayout
        android:id="@+id/searchPartDataTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/label_name"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/label_producer"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/etProducer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:text="@string/label_buyURL"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:text="@string/label_price"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/etBuyURL"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/etPrice"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:text="@string/label_additional_info"
                android:layout_weight="2"/>
        </TableRow>
    </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchPartDataTable">
        <EditText
            android:id="@+id/etAdditionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_search"/>

</RelativeLayout>
