<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kszych.pms.MenuActivity">
    <Button
        android:id="@+id/btnManageParts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_manage_parts" />
    <Button
        android:id="@+id/btnManagePackages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_manage_packages"/>
    <Button
        android:id="@+id/btnScanRFID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_scan"/>
    <!--<Button-->
        <!--android:id="@+id/btnTestActivity"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/menu_test"/>-->
</LinearLayout>
