<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kszych.pms.ClientSingleActivity">


    <TableLayout
        android:id="@+id/clientSingleTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_name" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/name"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_street" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_street_number" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/street" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/street_number" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_city" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_number" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/city" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/number" /> 
        </TableRow>
    </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/clientSingleTable">
        <TextView
            android:id="@+id/additionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</RelativeLayout>
