<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.kszych.pms.PackageSingleActivity">

    <LinearLayout
        android:id="@+id/bottomButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/singlePackageModify"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_modify"/>
        <Button
            android:id="@+id/singlePackageDelete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomButtonBar"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TableLayout
                android:id="@+id/singlePackageDataTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:text="@string/label_dimensions"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:text="@string/label_mass"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/tvDimensions"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tvMass"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/label_barcode"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/label_location"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/tvBarcode"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/label_additional_info"
                        android:layout_weight="2"/>
                </TableRow>

            </TableLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/singlePackageDataTable">
                <TextView
                    android:id="@+id/tvAdditionalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </RelativeLayout>
        <ListView
            android:id="@+id/singlePackagePartsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
