<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.kszych.pms.PartSingleActivity">


        <Button
            android:id="@+id/singlePartModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify"
            android:layout_alignParentBottom="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/singlePartModify"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TableLayout
                android:id="@+id/singlePartDataTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:text="@string/label_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:text="@string/label_producer"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tvProducer"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/label_buyURL"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/label_price"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/tvBuyURL"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/label_additional_info"
                        android:layout_weight="2"/>
                </TableRow>

            </TableLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/singlePartDataTable">
                <TextView
                    android:id="@+id/tvAdditionalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </RelativeLayout>
        <ListView
            android:id="@+id/singlePartPackagesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
